--- a/build.gradle
+++ b/build.gradle
@@ -60,4 +60,6 @@ dependencies {
 	implementation 'net.sf.jasperreports:jasperreports:6.17.0'
 	implementation 'com.google.zxing:core:3.5.1'
 	implementation 'com.google.zxing:javase:3.5.1'
+	implementation 'com.twilio.sdk:twilio:9.14.1'
+
 }
